# duck_ini

./: CMakeLists.txt  README.md  main.cpp
docs/: config.ini
ini/: ini_file.cpp  ini_file.h
